--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+        crossorigin=""/>
+        <link rel="stylesheet" href="style.css">
     <title>World Wide Currency Conversion</title>
 </head>
 
@@ -18,47 +21,52 @@
         </div>
 
         <form>
-            <div>
-                <label class="text-white">Amount</label>
-                <input type="number" class="" placeholder="Enter amount" required />
+            <div class="form-group">
+                <label class="text-dark">You have</label>
+                <div class="input-group">
+                    <input type="number" class="form-control border-none" placeholder="Enter amount" required />
+                    <span>
 
-                <label class="text-white">Base Currency</label>
-                <select>
-                    <option value="USD">US Dollar</option>
-                    <option value="EUR">Euro</option>
-                    <option value="SGD">Singapore Dollar</option>
-                    <option value="MYR">Malaysian Ringgit</option>
-                    <option value="INR">Indonesian Rupiah</option>
-                    <option value="BHT">Thai Baht</option>
-                    <option value="JPY">Japanese Yen</option>
-                    <option value="HKD">Hong Kong Dollar</option>
-                    <option value="AUD">Australian Dollar</option>
-                    <option value="CNY">Chinese Yuan</option>
-                </select>
+                        <select class="form-control">
+                            <option value="USD">US Dollar</option>
+                            <option value="EUR">Euro</option>
+                            <option value="SGD">Singapore Dollar</option>
+                            <option value="MYR">Malaysian Ringgit</option>
+                            <option value="IDR">Indonesian Rupiah</option>
+                            <option value="THB">Thai Baht</option>
+                            <option value="JPY">Japanese Yen</option>
+                            <option value="HKD">Hong Kong Dollar</option>
+                            <option value="AUD">Australian Dollar</option>
+                            <option value="CNY">Chinese Yuan</option>
+                        </select>
+                    </span>
+                </div>
             </div>
 
-            <div>
-                <label class="text-white">Amount</label>
-                <input type="number" class="" placeholder="Enter amount" required />
+            <div class="form-group mt-4">
+                <label class="text-dark">You get</label>
+                <div class="input-group">
+                    <input type="number" class="form-control" placeholder="Enter amount" required />
 
-                <label class="text-white">Target Currency</label>
-                <select>
-                    <option value="USD">US Dollar</option>
-                    <option value="EUR">Euro</option>
-                    <option value="SGD">Singapore Dollar</option>
-                    <option value="MYR">Malaysian Ringgit</option>
-                    <option value="THB">Indonesian Rupiah</option>
-                    <option value="">Thai Baht</option>
-                    <option value="JPY">Japanese Yen</option>
-                    <option value="HKD">Hong Kong Dollar</option>
-                    <option value="AUD">Australian Dollar</option>
-                    <option value="CNY">Chinese Yuan</option>
-                </select>
-
+                    <span>
+                        <select class="form-control">
+                            <option value="USD">US Dollar</option>
+                            <option value="EUR">Euro</option>
+                            <option value="SGD">Singapore Dollar</option>
+                            <option value="MYR">Malaysian Ringgit</option>
+                            <option value="IDR">Indonesian Rupiah</option>
+                            <option value="THB">Thai Baht</option>
+                            <option value="JPY">Japanese Yen</option>
+                            <option value="HKD">Hong Kong Dollar</option>
+                            <option value="AUD">Australian Dollar</option>
+                            <option value="CNY">Chinese Yuan</option>
+                        </select>
+                    </span>
+                </div>
             </div>
         </form>
 
-        <canvas id="chart"></canvas>
+        <canvas id="chart">hello</canvas>
 
         <table class="table table-primary table-striped table-bordered">
 
@@ -207,10 +215,12 @@
                 <td></td>
                 <td></td>
             </tr>
+            
 
+        </table><br><br><br><br><br>
+        <h1 class="text-center">Money Changers in Singapore</h1><br>
 
-        </table>
-
+        <div id="map"></div>
 
         <footer>
 
@@ -219,6 +229,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"
         integrity="sha512-DdX/YwF5e41Ok+AI81HI8f5/5UsoxCVT9GKYZRIzpLxb8Twz4ZwPPX+jQMwMhNQ9b5+zDEefc+dcvQoPWGNZ3g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
