--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-        crossorigin=""/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css">
+        <link rel="stylesheet"
+        href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css">
         <link rel="stylesheet" href="style.css">
     <title>World Wide Currency Conversion</title>
 </head>
@@ -22,14 +24,14 @@
 
         <form>
             <div class="form-group">
-                <label class="text-dark">You have</label>
+                <label class="text-dark mt-3">You have</label>
                 <div class="input-group">
-                    <input type="number" class="form-control border-none" placeholder="Enter amount" required />
+                    <input type="number" class="form-control border-none mt-2" placeholder="Enter amount" required />
                     <span>
 
-                        <select class="form-control">
-                            <option value="USD">US Dollar</option>
-                            <option value="EUR">Euro</option>
+                        <select class="form-control mt-2">
+                            <option value="USD"><span><img src="" alt=""></span>US Dollar</option>
+                            <option value="EUR"><img src="images\flags\icons8-euro-48.png" alt="euro">Euro</option>
                             <option value="SGD">Singapore Dollar</option>
                             <option value="MYR">Malaysian Ringgit</option>
                             <option value="IDR">Indonesian Rupiah</option>
@@ -46,10 +48,10 @@
             <div class="form-group mt-4">
                 <label class="text-dark">You get</label>
                 <div class="input-group">
-                    <input type="number" class="form-control" placeholder="Enter amount" required />
+                    <input type="number" class="form-control mt-2" placeholder="Enter amount" required />
 
                     <span>
-                        <select class="form-control">
+                        <select class="form-control mt-2">
                             <option value="USD">US Dollar</option>
                             <option value="EUR">Euro</option>
                             <option value="SGD">Singapore Dollar</option>
@@ -65,9 +67,9 @@
                 </div>
             </div>
         </form>
-
-        <canvas id="chart">hello</canvas>
-
+        <div>
+            <canvas id="chart"></canvas>
+        </div>
         <table class="table table-primary table-striped table-bordered">
 
             <tr>
@@ -215,12 +217,12 @@
                 <td></td>
                 <td></td>
             </tr>
-            
+
 
         </table><br><br><br><br><br>
-        <h1 class="text-center">Money Changers in Singapore</h1><br>
+        <h1 class="">Money Changers in Singapore</h1><br>
 
-        <div id="map"></div>
+        <div id="map" class="text-center"></div>
 
         <footer>
 
@@ -229,10 +231,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+        <script
+        src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"
         integrity="sha512-DdX/YwF5e41Ok+AI81HI8f5/5UsoxCVT9GKYZRIzpLxb8Twz4ZwPPX+jQMwMhNQ9b5+zDEefc+dcvQoPWGNZ3g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
