--- a/index.html
+++ b/index.html
@@ -220,10 +220,11 @@
 
 
         </table><br><br><br><br><br>
-        <h1 class="">Money Changers in Singapore</h1><br>
+        <h1 class="text-center">Money Changers in Singapore</h1><br>
 
-        <div id="map" class="text-center"></div>
-
+        <div class="d-flex justify-content-center">
+        <div id="map" ></div>
+        </div>    
         <footer>
 
         </footer>
