Table done with bugs

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="form-group mt-4">
                 <label class="text-dark">You get</label>
                 <div class="input-group">
-                    <input type="text" class="form-control mt-2" placeholder="Amount converted" id="result" readonly />
+                    <input type="number" class="form-control mt-2" placeholder="Amount converted" id="result" readonly />
 
                     <span>
                         <select class="form-control mt-2" id="target-currency">
@@ -73,7 +73,7 @@
         <div>
             <canvas id="chart"></canvas>
         </div>
-        <table class="table table-primary table-striped table-bordered">
+        <table class="table table-primary table-striped table-bordered" id="table-body">
             <tbody>
                 <tr>
                     <th></th>
