Last code update for the day

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         <div>
             <canvas id="chart"></canvas>
         </div>
-        <table class="table table-primary table-striped table-bordered">
+        <table class="table table-primary table-striped table-bordered text-center">
             <tbody id="table-body">
                 
             </tbody>
 
         </table><br><br><br><br><br>
-        <h1 class="text-center">Money Changers in Singapore</h1><br>
+        <h1 class="text-center text-white">Money Changers in Singapore</h1><br>
 
         <div class="d-flex justify-content-center">
             <div id="map"></div>
