--- a/index.html
+++ b/index.html
@@ -68,23 +68,23 @@
             </div>
         </form>
 
-        <button id="convert" class="bg-secondary mt-4">Convert</button>
+        <button id="convert" class="btn btn-primary mt-4">Convert</button>
 
         <div>
             <canvas id="chart"></canvas>
         </div>
-        <table class="table table-primary table-striped table-bordered text-center">
+        <table class="table table-responsive table-primary table-striped table-bordered text-center">
             <tbody id="table-body">
                 
-            </tbody>
+            </tbody><br><br>
 
-        </table><br><br><br><br><br>
-        <h1 class="text-center text-white">Money Changers in Singapore</h1><br>
+        </table>
+        <h1 class="text-center text-warning">Money Changers in Singapore</h1><br>
 
         <div class="d-flex justify-content-center">
             <div id="map"></div>
         </div>
-        <footer>
+        <footer class="bg-warning">
 
         </footer>
     </div>
